--- a/themes/maupassant/layout/_partial/footer.pug
+++ b/themes/maupassant/layout/_partial/footer.pug
@@ -1,7 +1,6 @@
-#footer= 'Copyright © ' + date(Date.now(), 'YYYY') + ' '
+#footer= ' © ' + date(Date.now(), 'YYYY') + ' '
   a(href=url_for('.'), rel='nofollow')= config.title + '.'
-  |  Powered by
-  a(rel='nofollow', target='_blank', href='https://hexo.io')  Hexo.
-  a(rel='nofollow', target='_blank', href='https://github.com/tufu9441/maupassant-hexo')  Theme
-  |  by
-  a(rel='nofollow', target='_blank', href='https://github.com/pagecho')  Cho.
+  |  由
+  a(rel='nofollow', target='_blank', href='https://hexo.io')  Hexo  
+  a(rel='nofollow', target='_blank', href='https://github.com/tufu9441/maupassant-hexo') + mupassant
+  |  强力驱动.
