--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -27,3 +27,4 @@ if theme.themeStyle == "light"
 if theme.themeStyle == "dark"
     link(rel="stylesheet", href= url_for('css/style-dark.css'))
 link(rel="alternate" type="application/atom+xml" title="ATOM 1.0" href="/atom.xml")
+script(src= url_for('js/valine.min.js'))
