--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -4,6 +4,7 @@ html(lang="zh-CN")
         include head
 
     body
+        span.donate-address 唯一指定邮箱：journey.ad@qq.com
         div#stage.container
             div.row
                 include sidebar
@@ -19,5 +20,5 @@ html(lang="zh-CN")
         script(src= url_for('js/jquery-migrate-1.2.1.min.js'))
         script(src= url_for('js/jquery.appear.js'))
         script(src= url_for('js/google-analytics.js'))
-        script(src= url_for('js/typography.js'))
+        script(src= url_for('js/typography.min.js'))
 
