修改左下角信息

--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -4,7 +4,7 @@ html(lang="zh-CN")
         include head
 
     body
-        span.donate-address 唯一指定邮箱：journey.ad@qq.com
+        span.donate-address i@api2u.me
         div#stage.container
             div.row
                 include sidebar
