--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -19,12 +19,12 @@ meta(content="telephone=no",name="format-detection")
 
 meta(name="renderer",content="webkit")
 link(rel="short icon", href="/images/favicon.png",type="image/x-icon")
-link(rel="stylesheet", href= url_for('css/bootstrap.min.css'))
-link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
-//- link(rel="stylesheet", href= url_for('css/typography-custom-font.css'))
+link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/bootstrap.min.css'))
+link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/font-awesome.min.css'))
+//- link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/typography-custom-font.css'))
 if theme.themeStyle == "light"
-    link(rel="stylesheet", href= url_for('css/style.css'))
+    link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/style.css'))
 if theme.themeStyle == "dark"
-    link(rel="stylesheet", href= url_for('css/style-dark.css'))
+    link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/style-dark.css'))
 link(rel="alternate" type="application/atom+xml" title="ATOM 1.0" href="/atom.xml")
 script(src= url_for('js/valine.min.js'))
