--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -15,10 +15,10 @@ html(lang="zh-CN")
                         include footer
 
 
-        script(src= url_for('js/jquery-3.1.0.min.js'))
-        script(src= url_for('js/bootstrap.min.js'))
-        script(src= url_for('js/jquery-migrate-1.2.1.min.js'))
-        script(src= url_for('js/jquery.appear.js'))
-        script(src= url_for('js/google-analytics.js'))
-        script(src= url_for('js/typography.min.js'))
+        script(src= url_for('https://cdn.api2u.cn/js/jquery-3.1.0.min.js'))
+        script(src= url_for('https://cdn.api2u.cn/js/bootstrap.min.js'))
+        script(src= url_for('https://cdn.api2u.cn/js/jquery-migrate-1.2.1.min.js'))
+        script(src= url_for('https://cdn.api2u.cn/js/jquery.appear.js'))
+        script(src= url_for('https://cdn.api2u.cn/js/google-analytics.js'))
+        script(src= url_for('https://cdn.api2u.cn/js/typography.min.js'))
 
