--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -1,6 +1,7 @@
 meta(charset="utf-8")
 meta(name="X-UA-Compatible", content="IE=edge")
 meta(name="author", content= theme.author)
+meta(name="referrer",content="no-referrer")
 title
     block site_title
         = config.title
@@ -16,6 +17,7 @@ meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-sca
 meta(content="yes",name="apple-mobile-web-app-capable")
 meta(content="black",name="apple-mobile-web-app-status-bar-style")
 meta(content="telephone=no",name="format-detection")
+
 
 meta(name="renderer",content="webkit")
 link(rel="short icon", href="/images/favicon.png",type="image/x-icon")
