--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -21,6 +21,7 @@ meta(content="telephone=no",name="format-detection")
 
 meta(name="renderer",content="webkit")
 link(rel="short icon", href="/images/favicon.png",type="image/x-icon")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/isecret/alu-face@master/src/css/alu.css")
 link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/bootstrap.min.css'))
 link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/font-awesome.min.css'))
 //- link(rel="stylesheet", href= url_for('https://cdn.api2u.cn/css/typography-custom-font.css'))
