--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -13,7 +13,9 @@ html(lang="zh-CN")
                     block content
                     div.visible-xs.site-bottom-footer
                         include footer
-
+	script
+		ALU()  
+	script
 
         script(src= url_for('https://cdn.api2u.cn/js/jquery-3.1.0.min.js'))
         script(src= url_for('https://cdn.api2u.cn/js/bootstrap.min.js'))
@@ -21,4 +23,5 @@ html(lang="zh-CN")
         script(src= url_for('https://cdn.api2u.cn/js/jquery.appear.js'))
         script(src= url_for('https://cdn.api2u.cn/js/google-analytics.js'))
         script(src= url_for('https://cdn.api2u.cn/js/typography.min.js'))
+		script(src= url_for('https://cdn.jsdelivr.net/gh/isecret/alu-face@master/src/js/alu.js'))
 
