--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -22,7 +22,7 @@ html(lang="zh-CN")
         script(src= url_for('https://cdn.api2u.cn/js/google-analytics.js'))
         script(src= url_for('https://cdn.api2u.cn/js/typography.min.js'))
         script(src='https://cdn.jsdelivr.net/gh/isecret/alu-face@master/src/js/alu.js')
-            script.
-                 ALU();
+        script.
+          ALU({element:document.getElementsByTagName("article")[0]})
 
 
