--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -15,6 +15,9 @@ html(lang="zh-CN")
                         include footer
     
 
+        script(src='https://cdn.jsdelivr.net/gh/isecret/alu-face@master/src/js/alu.js')
+        script.
+          ALU({element:document.getElementsByTagName("article")[0]})
         script(src= url_for('https://cdn.api2u.cn/js/jquery-3.1.0.min.js'))
         script(src= url_for('https://cdn.api2u.cn/js/bootstrap.min.js'))
         script(src= url_for('https://cdn.api2u.cn/js/jquery-migrate-1.2.1.min.js'))
