--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -1,8 +1,5 @@
 doctype
 html(lang="zh-CN")
-script(src='https://cdn.jsdelivr.net/gh/isecret/alu-face@master/src/js/alu.js')
-script.
-  ALU({element:document.getElementsByTagName("article")[0]})
 
 
     head
@@ -26,5 +23,9 @@ script.
         script(src= url_for('https://cdn.api2u.cn/js/jquery.appear.js'))
         script(src= url_for('https://cdn.api2u.cn/js/google-analytics.js'))
         script(src= url_for('https://cdn.api2u.cn/js/typography.min.js'))
+        script(src= url_for('https://cdn.jsdelivr.net/gh/isecret/alu-face@master/src/js/alu.js'))
+        script.
+          ALU({element:document.getElementsByTagName("article")[0]})
+
 
 
