修改css使得图片无阴影及外框,以适配我的阿鲁表情
其实是把阴影跟外框改成白色的，我怕直接删除css中对应的代码可能会触发未知问题。

--- a/themes/Hola/source/css/hola.css
+++ b/themes/Hola/source/css/hola.css
@@ -332,9 +332,9 @@ blockquote {
 .recent-posts img, .post img, .page img, .archive img, .tag img, .category img, .archive img {
     box-sizing: border-box;
     margin: auto;
-    border: 1px solid #ddd;
+    border: 1px solid #F8F8F8;
     border-radius: 4px;
-    box-shadow: 5px 5px 10px #DDD;
+    box-shadow: 5px 5px 10px #F8F8F8;
 }
 
 hr {
