--- a/themes/Hola/layout/page.ejs
+++ b/themes/Hola/layout/page.ejs
@@ -3,4 +3,5 @@
   <h1 class="page-title"><%=page.title%></h1>
   <%-page.content%>
 </article>
-<div id="gitment"></div>
+//<div id="gitment"></div>
+//弃用gitment
