--- a/themes/Hola/layout/layout.ejs
+++ b/themes/Hola/layout/layout.ejs
@@ -90,7 +90,7 @@ if (is_home()) pageTitle = config.title;
             <div class="footer-inner">
                 <span class="footer-other">
                     <%-theme.footer_expand%>
-                    <%= __('misc.theme')%> <a href="https://github.com/isecret/Hola">Hola</a> / <a href="http://hexo.io">Hexo</a>.
+                    <%= __('misc.theme')%> <a target="_blank" href="https://github.com/isecret/Hola">Hola</a> / <a target="_blank" href="http://hexo.io">Hexo</a>.
                 </span>
             </div>
         </div>
