--- a/themes/Hola/layout/category.ejs
+++ b/themes/Hola/layout/category.ejs
@@ -5,10 +5,10 @@
         <div class="recent-post-items">
             <span class="recent-post-time"><%=article.date.format('MMM Do')%></span>
             <span class="recent-post-item">
-                <% if (post.link) { %>
-                    <a href="<%=url_for(post.link)%>" target="_blank"><%=article.title%></a>
+                <% if (article.link) { %>
+                    <a href="<%=url_for(article.link)%>" target="_blank"><%=article.title%></a>
                 <% } else { %>
-                    <a href="<%=url_for(post.link)%>">
+                    <a href="<%=url_for(article.link)%>">
                     <%=article.title || 'No Title'%>
                     </a>
                 <% } %>
